<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:layout_weight="1"
    tools:context=".MainActivity" >


   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_alignParentStart="true"
       android:id="@+id/relativeLayout"
       android:layout_alignParentBottom="true">


       <ImageView
           android:id="@+id/imageView"
           android:layout_width="wrap_content"
           android:layout_height="306dp"
           android:layout_alignParentStart="true"
           android:layout_alignParentTop="true"
           android:layout_alignParentEnd="true"
           android:layout_marginStart="38dp"
           android:layout_marginTop="13dp"
           android:layout_marginEnd="0dp"
           app:srcCompat="@drawable/tj_logo_no_name" />


       <TextView
           android:id="@+id/textView2"
           android:layout_width="312dp"
           android:layout_height="47dp"
           android:layout_alignParentStart="true"
           android:layout_alignParentTop="true"
           android:layout_alignParentEnd="true"
           android:layout_marginStart="47dp"
           android:layout_marginTop="336dp"
           android:layout_marginEnd="52dp"
           android:text="@string/tj_maintenance"
           android:textAlignment="center"
           android:textColor="#D50000"
           android:textSize="28sp"
           android:textStyle="bold" />

       <TextView
           android:id="@+id/textView"
           android:layout_width="410dp"
           android:layout_height="47dp"
           android:layout_below="@+id/textView2"
           android:layout_alignParentStart="true"
           android:layout_alignParentEnd="true"
           android:layout_marginStart="0dp"
           android:layout_marginTop="35dp"
           android:layout_marginEnd="1dp"
           android:text="@string/chemical_containment_experts"
           android:textAlignment="center"
           android:textColor="#FFB300"
           android:textSize="22sp"
           android:textStyle="bold" />

       <Button
           android:id="@+id/button"
           android:layout_width="249dp"
           android:layout_height="wrap_content"
           android:layout_alignParentStart="true"
           android:layout_alignParentEnd="true"
           android:layout_alignParentBottom="true"
           android:layout_marginStart="79dp"
           android:layout_marginEnd="83dp"
           android:layout_marginBottom="104dp"
           android:background="@drawable/rounded_btn2"
           android:text="@string/services2"
           android:textColor="#FFB300"
           android:textSize="22sp"
           android:textStyle="bold" />

       <Button
           android:id="@+id/button2"
           android:layout_width="249dp"
           android:layout_height="wrap_content"
           android:layout_alignParentStart="true"
           android:layout_alignParentEnd="true"
           android:layout_alignParentBottom="true"
           android:layout_marginStart="79dp"
           android:layout_marginEnd="83dp"
           android:layout_marginBottom="46dp"
           android:background="@drawable/rounded_btn2"
           android:text="@string/call_us"
           android:textColor="#FFB300"
           android:textSize="20sp"
           android:textStyle="bold" />


   </RelativeLayout>




</RelativeLayout>